After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790093 - gio-tool: fix inverted logic in monitor tool
gio-tool: fix inverted logic in monitor tool
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2017-11-08 20:44 UTC by Christian Kellner
Modified: 2017-11-10 08:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gio-tool: fix inverted logic in monitor tool (1002 bytes, patch)
2017-11-08 20:44 UTC, Christian Kellner
committed Details | Review

Description Christian Kellner 2017-11-08 20:44:32 UTC
I tried to use the monitor tool but it refused with "No locations given" although I
provided at least one. If I am not mistaken the logic is inverted.
Comment 1 Christian Kellner 2017-11-08 20:44:36 UTC
Created attachment 363255 [details] [review]
gio-tool: fix inverted logic in monitor tool

The tool should refuse to work if none of the locations to watch
are set, not if *any* of them are unset.
Comment 2 Philip Withnall 2017-11-08 20:56:11 UTC
Review of attachment 363255 [details] [review]:

Definitely, thanks.
Comment 3 Christian Kellner 2017-11-09 10:04:54 UTC
Attachment 363255 [details] pushed as b9b7a1d - gio-tool: fix inverted logic in monitor tool
Comment 4 Ondrej Holy 2017-11-10 08:06:26 UTC
Thanks for the fix, my fault... will you push it also into glib-2-54, please?
Comment 5 Philip Withnall 2017-11-10 08:54:55 UTC
(In reply to Ondrej Holy from comment #4)
> Thanks for the fix, my fault... will you push it also into glib-2-54, please?

Pushed to glib-2-54 as 5be7554a6.